[gd_scene load_steps=3 format=3 uid="uid://cakgbvloua2ll"]

[ext_resource type="Theme" uid="uid://c501q1j77skrq" path="res://game_logic/minigames/base_minigame/minigame_theme.tres" id="1_5xwyy"]
[ext_resource type="Script" path="res://game_logic/minigames/base_minigame/base_minigame.gd" id="1_tpuyx"]

[node name="BaseMinigame" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5xwyy")
script = ExtResource("1_tpuyx")

[node name="GoodTypeSound" type="AudioStreamPlayer" parent="."]

[node name="BadTypeSound" type="AudioStreamPlayer" parent="."]

[node name="MinigameContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PromptText" type="Label" parent="MinigameContainer"]
layout_mode = 2
text = "This is a prompt!"

[node name="PromptSeparator" type="HSeparator" parent="MinigameContainer"]
layout_mode = 2

[node name="Minigame" type="PanelContainer" parent="MinigameContainer"]
layout_mode = 2

[node name="AutohackSeparator" type="HSeparator" parent="MinigameContainer"]
layout_mode = 2

[node name="AutoHack" type="Button" parent="MinigameContainer"]
layout_mode = 2
text = "Preparing Autohack..."
